# twsrt

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  SECURITY_CONCEPT.md  pyproject.toml
.specify/memory/: constitution.md
example/: .srt-settings.json  bash-rules.json
specs/001-agent-security-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-agent-security-config/checklists/: requirements.md
specs/001-agent-security-config/contracts/: cli-contract.md
specs/002-add-srt-domain/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-add-srt-domain/checklists/: requirements.md
specs/002-add-srt-domain/contracts/: cli-contract.md
specs/003-copilot-allow-url/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-copilot-allow-url/checklists/: requirements.md
specs/003-copilot-allow-url/contracts/: cli-contract.md
specs/004-claude-network-keys/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-claude-network-keys/checklists/: requirements.md
specs/005-claude-filesystem-keys/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-claude-filesystem-keys/checklists/: requirements.md
specs/005-claude-filesystem-keys/contracts/: cli-contract.md
specs/006-yolo-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-yolo-mode/checklists/: requirements.md
specs/006-yolo-mode/contracts/: cli.md
specs/007-symlink-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-symlink-config/checklists/: requirements.md
specs/007-symlink-config/contracts/: cli.md
src/twsrt/: __init__.py
src/twsrt/lib/: agent.py  claude.py  config.py  copilot.py  models.py  sources.py  symlink.py
tests/: conftest.py
tests/lib/: test_agent.py  test_claude.py  test_config.py  test_copilot.py  test_diff.py  test_models.py  test_sources.py  test_symlink.py
